--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "es6-async-pipe",
-  "version": "0.1.4",
+  "version": "0.2.0",
   "description": "A pipe for async/sync functions. ",
   "main": "lib/es6-async-pipe.js",
   "scripts": {
     "compile": "babel -d lib/ src/",
-    "prepublish": "npm run compile"
+    "mocha": "mocha --compilers js:babel-core/register test/index.js",
+    "prepublish": "npm run compile",
+    "test": "npm run compile && npm run mocha"
   },
   "repository": {
     "type": "git",
@@ -30,6 +32,7 @@
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-stage-0": "^6.5.0",
     "babel-runtime": "^6.6.1",
+    "chai": "^3.5.0",
     "mocha": "^2.4.5"
   }
 }
