--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "description": "A pipe for async/sync functions. ",
   "main": "lib/es6-async-pipe.js",
   "scripts": {
-    "compile": "babel -d lib/ src/",
-    "mocha": "mocha --compilers js:babel-core/register test/index.js",
-    "prepublish": "npm run compile",
-    "test": "npm run compile && npm run mocha"
+    "lint": "./node_modules/.bin/eslint src/es6-async-pipe.js",
+    "compile": "./node_modules/.bin/babel -d lib/ src/",
+    "mocha": "./node_modules/.bin/_mocha --compilers js:babel-core/register test/index.js",
+    "test": "npm run compile && npm run mocha",
+    "build": "npm run lint && npm run test && npm run compile",
+    "prepublish": "npm run build"
   },
   "repository": {
     "type": "git",
@@ -26,13 +28,16 @@
   "devDependencies": {
     "babel-cli": "^6.6.5",
     "babel-core": "^6.7.4",
-    "babel-loader": "^6.2.4",
+    "babel-eslint": "^6.0.2",
     "babel-plugin-transform-runtime": "^6.6.0",
     "babel-polyfill": "^6.7.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-stage-0": "^6.5.0",
     "babel-runtime": "^6.6.1",
     "chai": "^3.5.0",
+    "eslint": "^2.5.3",
+    "eslint-config-airbnb": "^6.2.0",
+    "eslint-plugin-react": "^4.3.0",
     "mocha": "^2.4.5"
   }
 }
