--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "lint": "./node_modules/.bin/eslint src/es6-async-pipe.js",
     "compile": "./node_modules/.bin/babel -d lib/ src/",
+    "testling": "./node_modules/.bin/babel -d testling/ test/",
     "mocha": "./node_modules/.bin/_mocha --compilers js:babel-core/register test/index.js",
     "test": "npm run compile && npm run mocha",
     "build": "npm run lint && npm run test && npm run compile",
@@ -25,6 +26,20 @@
     "url": "https://github.com/Elvisz/es6-async-pipe/issues"
   },
   "homepage": "https://github.com/Elvisz/es6-async-pipe#readme",
+  "testling": {
+    "files": "testling/index.js",
+    "harness": "mocha",
+    "browsers": [
+      "ie/6..latest",
+      "chrome/22..latest",
+      "firefox/16..latest",
+      "safari/latest",
+      "opera/11.0..latest",
+      "iphone/6",
+      "ipad/6",
+      "android-browser/latest"
+    ]
+  },
   "devDependencies": {
     "babel-cli": "^6.6.5",
     "babel-core": "^6.7.4",
