--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "compile": "./node_modules/.bin/babel -d lib/ src/",
     "testling": "./node_modules/.bin/babel -d testling/ test/",
     "mocha": "./node_modules/.bin/_mocha --compilers js:babel-core/register test/index.js",
+    "istanbul": "istanbul cover node_modules/mocha/bin/_mocha testling/index.js",
+    "coverage": "npm run compile && npm run testling && npm run istanbul",
     "test": "npm run compile && npm run mocha",
     "build": "npm run lint && npm run test && npm run compile",
     "prepublish": "npm run build"
@@ -53,6 +55,7 @@
     "eslint": "^2.5.3",
     "eslint-config-airbnb": "^6.2.0",
     "eslint-plugin-react": "^4.3.0",
+    "istanbul": "^0.4.3",
     "mocha": "^2.4.5"
   }
 }
