--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
   "scripts": {
     "lint": "./node_modules/.bin/eslint src/es6-async-pipe.js",
     "compile": "./node_modules/.bin/babel -d lib/ src/",
-    "testling": "./node_modules/.bin/babel -d testling/ test/",
+    "transpiler": "./node_modules/.bin/babel -d testling/ test/",
     "mocha": "./node_modules/.bin/_mocha --compilers js:babel-core/register test/index.js",
-    "istanbul": "istanbul cover node_modules/mocha/bin/_mocha testling/index.js",
-    "coverage": "npm run compile && npm run testling && npm run istanbul",
-    "test": "npm run compile && npm run mocha",
-    "build": "npm run lint && npm run test && npm run compile",
+    "istanbul": "istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly testling/index.js && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage",
+    "coverage": "npm run compile && npm run transpiler && npm run istanbul",
+    "test": "npm run coverage",
+    "build": "npm run lint && npm run test",
     "prepublish": "npm run build"
   },
   "repository": {
@@ -52,10 +52,12 @@
     "babel-preset-stage-0": "^6.5.0",
     "babel-runtime": "^6.6.1",
     "chai": "^3.5.0",
+    "coveralls": "^2.11.9",
     "eslint": "^2.5.3",
     "eslint-config-airbnb": "^6.2.0",
     "eslint-plugin-react": "^4.3.0",
     "istanbul": "^0.4.3",
-    "mocha": "^2.4.5"
+    "mocha": "^2.4.5",
+    "mocha-lcov-reporter": "^1.2.0"
   }
 }
